; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_eap_server_ttls.c_eap_ttls_getKey.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_eap_server_ttls.c_eap_ttls_getKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_sm = type { i32 }
%struct.eap_ttls_data = type { i64, i32 }

@SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [21 x i8] c"ttls keying material\00", align 1
@EAP_TLS_KEY_LEN = common dso_local global i64 0, align 8
@MSG_DEBUG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [22 x i8] c"EAP-TTLS: Derived key\00", align 1
@.str.2 = private unnamed_addr constant [31 x i8] c"EAP-TTLS: Failed to derive key\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.eap_sm*, i8*, i64*)* @eap_ttls_getKey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @eap_ttls_getKey(%struct.eap_sm* %0, i8* %1, i64* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.eap_sm*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca %struct.eap_ttls_data*, align 8
  %9 = alloca i32*, align 8
  store %struct.eap_sm* %0, %struct.eap_sm** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64* %2, i64** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.eap_ttls_data*
  store %struct.eap_ttls_data* %11, %struct.eap_ttls_data** %8, align 8
  %12 = load %struct.eap_ttls_data*, %struct.eap_ttls_data** %8, align 8
  %13 = getelementptr inbounds %struct.eap_ttls_data, %struct.eap_ttls_data* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @SUCCESS, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %38

18:                                               ; preds = %3
  %19 = load %struct.eap_sm*, %struct.eap_sm** %5, align 8
  %20 = load %struct.eap_ttls_data*, %struct.eap_ttls_data** %8, align 8
  %21 = getelementptr inbounds %struct.eap_ttls_data, %struct.eap_ttls_data* %20, i32 0, i32 1
  %22 = load i64, i64* @EAP_TLS_KEY_LEN, align 8
  %23 = call i32* @eap_server_tls_derive_key(%struct.eap_sm* %19, i32* %21, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32* null, i32 0, i64 %22)
  store i32* %23, i32** %9, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %26, label %33

26:                                               ; preds = %18
  %27 = load i64, i64* @EAP_TLS_KEY_LEN, align 8
  %28 = load i64*, i64** %7, align 8
  store i64 %27, i64* %28, align 8
  %29 = load i32, i32* @MSG_DEBUG, align 4
  %30 = load i32*, i32** %9, align 8
  %31 = load i64, i64* @EAP_TLS_KEY_LEN, align 8
  %32 = call i32 @wpa_hexdump_key(i32 %29, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i32* %30, i64 %31)
  br label %36

33:                                               ; preds = %18
  %34 = load i32, i32* @MSG_DEBUG, align 4
  %35 = call i32 @wpa_printf(i32 %34, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.2, i64 0, i64 0))
  br label %36

36:                                               ; preds = %33, %26
  %37 = load i32*, i32** %9, align 8
  store i32* %37, i32** %4, align 8
  br label %38

38:                                               ; preds = %36, %17
  %39 = load i32*, i32** %4, align 8
  ret i32* %39
}

declare dso_local i32* @eap_server_tls_derive_key(%struct.eap_sm*, i32*, i8*, i32*, i32, i64) #1

declare dso_local i32 @wpa_hexdump_key(i32, i8*, i32*, i64) #1

declare dso_local i32 @wpa_printf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
